--- a/lite/data/structurizr.properties
+++ b/lite/data/structurizr.properties
@@ -1,5 +1,5 @@
 structurizr.autoRefreshInterval=500
 structurizr.remote.workspaceId=1
-structurizr.remote.apiKey=bc4c9c32-bb7a-4a93-8efd-5cfe478dcbd8
-structurizr.remote.apiSecret=d3c2c3d7-55c4-4968-8ea2-055231125880
+structurizr.remote.apiKey=$STRUTURIZR_API_KEY
+structurizr.remote.apiSecret=$STUCTURIZR_API_SECRET
 structurizr.remote.apiUrl=https://structurizr.bbnavi.de/api
