Add deployment diagrams for other tools

--- a/lite/data/structurizr.properties
+++ b/lite/data/structurizr.properties
@@ -1,5 +1,5 @@
 structurizr.autoRefreshInterval=500
-structurizr.remote.workspaceId=1
-structurizr.remote.apiKey=$STRUTURIZR_API_KEY
-structurizr.remote.apiSecret=$STUCTURIZR_API_SECRET
-structurizr.remote.apiUrl=https://structurizr.bbnavi.de/api
+# structurizr.remote.workspaceId=1
+# structurizr.remote.apiKey=$STRUTURIZR_API_KEY
+# structurizr.remote.apiSecret=$STUCTURIZR_API_SECRET
+# structurizr.remote.apiUrl=https://structurizr.bbnavi.de/api
